// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`extraction characterization > colors.css as css 1`] = `
{
  "colors": [
    {
      "context": "--brand: #ff0000;",
      "format": "hex",
      "position": {
        "column": 11,
        "line": 3,
      },
      "value": "#ff0000",
    },
    {
      "context": "--brand-short: #f00;",
      "format": "hex",
      "position": {
        "column": 17,
        "line": 4,
      },
      "value": "#f00",
    },
    {
      "context": "--brand-alpha: #ff0000aa;",
      "format": "hex",
      "position": {
        "column": 17,
        "line": 5,
      },
      "value": "#ff0000aa",
    },
    {
      "context": "color: rgb(16, 32, 48);",
      "format": "rgb",
      "position": {
        "column": 9,
        "line": 9,
      },
      "value": "rgb(16, 32, 48)",
    },
    {
      "context": "background: rgba(255, 128, 0, 0.5);",
      "format": "rgba",
      "position": {
        "column": 14,
        "line": 10,
      },
      "value": "rgba(255, 128, 0, 0.5)",
    },
    {
      "context": "border-color: hsl(210, 50%, 40%);",
      "format": "hsl",
      "position": {
        "column": 16,
        "line": 11,
      },
      "value": "hsl(210, 50%, 40%)",
    },
    {
      "context": "outline-color: hsla(210, 50%, 40%, 0.25);",
      "format": "hsla",
      "position": {
        "column": 17,
        "line": 12,
      },
      "value": "hsla(210, 50%, 40%, 0.25)",
    },
    {
      "context": "box-shadow: 0 0 4px navy;",
      "format": "named",
      "position": {
        "column": 22,
        "line": 13,
      },
      "value": "navy",
    },
    {
      "context": "rgb(1,",
      "format": "rgb",
      "position": {
        "column": 3,
        "line": 24,
      },
      "value": "rgb(1, 2, 3)",
    },
    {
      "context": "#00ff00",
      "format": "hex",
      "position": {
        "column": 3,
        "line": 26,
      },
      "value": "#00ff00",
    },
  ],
  "errors": [],
  "metadata": undefined,
  "success": true,
  "warnings": [],
}
`;

exports[`extraction characterization > colors.html as html 1`] = `
{
  "colors": [
    {
      "context": "<body style="background: #112233; color: rgb(4, 5, 6)">",
      "format": "hex",
      "position": {
        "column": 26,
        "line": 3,
      },
      "value": "#112233",
    },
    {
      "context": "<body style="background: #112233; color: rgb(4, 5, 6)">",
      "format": "rgb",
      "position": {
        "column": 42,
        "line": 3,
      },
      "value": "rgb(4, 5, 6)",
    },
    {
      "context": "<div style='border-color: hsl(300, 60%, 50%)'>Hello</div>",
      "format": "hsl",
      "position": {
        "column": 28,
        "line": 4,
      },
      "value": "hsl(300, 60%, 50%)",
    },
    {
      "context": ".inline { color: #445566; }",
      "format": "hex",
      "position": {
        "column": 20,
        "line": 6,
      },
      "value": "#445566",
    },
    {
      "context": "<span style="color: rgba(7, 8, 9, 0.75); background: #fff">x</span>",
      "format": "rgba",
      "position": {
        "column": 22,
        "line": 9,
      },
      "value": "rgba(7, 8, 9, 0.75)",
    },
    {
      "context": "<span style="color: rgba(7, 8, 9, 0.75); background: #fff">x</span>",
      "format": "hex",
      "position": {
        "column": 55,
        "line": 9,
      },
      "value": "#fff",
    },
  ],
  "errors": [],
  "metadata": undefined,
  "success": true,
  "warnings": [],
}
`;

exports[`extraction characterization > colors.js as javascript 1`] = `
{
  "colors": [
    {
      "context": "primary: '#0af',",
      "format": "hex",
      "position": {
        "column": 12,
        "line": 3,
      },
      "value": "#0af",
    },
    {
      "context": "secondary: 'rgb(10, 20, 30)',",
      "format": "rgb",
      "position": {
        "column": 14,
        "line": 4,
      },
      "value": "rgb(10, 20, 30)",
    },
    {
      "context": "danger: 'crimson',",
      "format": "named",
      "position": {
        "column": 11,
        "line": 5,
      },
      "value": "crimson",
    },
    {
      "context": "color: #123abc;",
      "format": "hex",
      "position": {
        "column": 9,
        "line": 10,
      },
      "value": "#123abc",
    },
    {
      "context": "background: hsla(10, 20%, 30%, 0.5);",
      "format": "hsla",
      "position": {
        "column": 14,
        "line": 11,
      },
      "value": "hsla(10, 20%, 30%, 0.5)",
    },
    {
      "context": "const el = document.getElementById('#ff9900');",
      "format": "hex",
      "position": {
        "column": 37,
        "line": 14,
      },
      "value": "#ff9900",
    },
    {
      "context": "document.body.style.background = "rgba(1, 2, 3, 0.9)";",
      "format": "rgba",
      "position": {
        "column": 35,
        "line": 15,
      },
      "value": "rgba(1, 2, 3, 0.9)",
    },
    {
      "context": "const styled = { color: "#abcdef", backgroundColor: "hsl(90, 10%, 20%)" };",
      "format": "hex",
      "position": {
        "column": 26,
        "line": 16,
      },
      "value": "#abcdef",
    },
    {
      "context": "const styled = { color: "#abcdef", backgroundColor: "hsl(90, 10%, 20%)" };",
      "format": "hsl",
      "position": {
        "column": 54,
        "line": 16,
      },
      "value": "hsl(90, 10%, 20%)",
    },
  ],
  "errors": [],
  "metadata": undefined,
  "success": true,
  "warnings": [],
}
`;

exports[`extraction characterization > colors.js as typescript 1`] = `
{
  "colors": [
    {
      "context": "primary: '#0af',",
      "format": "hex",
      "position": {
        "column": 12,
        "line": 3,
      },
      "value": "#0af",
    },
    {
      "context": "secondary: 'rgb(10, 20, 30)',",
      "format": "rgb",
      "position": {
        "column": 14,
        "line": 4,
      },
      "value": "rgb(10, 20, 30)",
    },
    {
      "context": "danger: 'crimson',",
      "format": "named",
      "position": {
        "column": 11,
        "line": 5,
      },
      "value": "crimson",
    },
    {
      "context": "color: #123abc;",
      "format": "hex",
      "position": {
        "column": 9,
        "line": 10,
      },
      "value": "#123abc",
    },
    {
      "context": "background: hsla(10, 20%, 30%, 0.5);",
      "format": "hsla",
      "position": {
        "column": 14,
        "line": 11,
      },
      "value": "hsla(10, 20%, 30%, 0.5)",
    },
    {
      "context": "const el = document.getElementById('#ff9900');",
      "format": "hex",
      "position": {
        "column": 37,
        "line": 14,
      },
      "value": "#ff9900",
    },
    {
      "context": "document.body.style.background = "rgba(1, 2, 3, 0.9)";",
      "format": "rgba",
      "position": {
        "column": 35,
        "line": 15,
      },
      "value": "rgba(1, 2, 3, 0.9)",
    },
    {
      "context": "const styled = { color: "#abcdef", backgroundColor: "hsl(90, 10%, 20%)" };",
      "format": "hex",
      "position": {
        "column": 26,
        "line": 16,
      },
      "value": "#abcdef",
    },
    {
      "context": "const styled = { color: "#abcdef", backgroundColor: "hsl(90, 10%, 20%)" };",
      "format": "hsl",
      "position": {
        "column": 54,
        "line": 16,
      },
      "value": "hsl(90, 10%, 20%)",
    },
  ],
  "errors": [],
  "metadata": undefined,
  "success": true,
  "warnings": [],
}
`;

exports[`extraction characterization > colors.less as less 1`] = `
{
  "colors": [
    {
      "context": "@primary: #00aaff;",
      "format": "hex",
      "position": {
        "column": 11,
        "line": 1,
      },
      "value": "#00aaff",
    },
    {
      "context": "@named: seagreen;",
      "format": "named",
      "position": {
        "column": 9,
        "line": 2,
      },
      "value": "seagreen",
    },
    {
      "context": "@alpha: hsla(120, 30%, 40%, 0.6);",
      "format": "hsla",
      "position": {
        "column": 9,
        "line": 3,
      },
      "value": "hsla(120, 30%, 40%, 0.6)",
    },
    {
      "context": "background: rgba(0, 170, 255, 0.25);",
      "format": "rgba",
      "position": {
        "column": 14,
        "line": 7,
      },
      "value": "rgba(0, 170, 255, 0.25)",
    },
    {
      "context": "border-color: #fff;",
      "format": "hex",
      "position": {
        "column": 16,
        "line": 8,
      },
      "value": "#fff",
    },
    {
      "context": "box-shadow: 0 0 3px #a1b2c3;",
      "format": "hex",
      "position": {
        "column": 22,
        "line": 9,
      },
      "value": "#a1b2c3",
    },
    {
      "context": "outline: 1px solid tomato;",
      "format": "named",
      "position": {
        "column": 21,
        "line": 10,
      },
      "value": "tomato",
    },
  ],
  "errors": [],
  "metadata": undefined,
  "success": true,
  "warnings": [],
}
`;

exports[`extraction characterization > colors.scss as scss 1`] = `
{
  "colors": [
    {
      "context": "$primary: #3366ff;",
      "format": "hex",
      "position": {
        "column": 11,
        "line": 1,
      },
      "value": "#3366ff",
    },
    {
      "context": "$accent: crimson;",
      "format": "named",
      "position": {
        "column": 10,
        "line": 2,
      },
      "value": "crimson",
    },
    {
      "context": "$alpha: rgba(10, 20, 30, 0.4);",
      "format": "rgba",
      "position": {
        "column": 9,
        "line": 3,
      },
      "value": "rgba(10, 20, 30, 0.4)",
    },
    {
      "context": "background: lighten(#3366ff, 10%);",
      "format": "hex",
      "position": {
        "column": 22,
        "line": 7,
      },
      "value": "#3366ff",
    },
    {
      "context": "box-shadow: 0 0 2px hsl(120, 40%, 30%);",
      "format": "hsl",
      "position": {
        "column": 22,
        "line": 10,
      },
      "value": "hsl(120, 40%, 30%)",
    },
    {
      "context": "text-shadow: 1px 1px #99aabb;",
      "format": "hex",
      "position": {
        "column": 23,
        "line": 11,
      },
      "value": "#99aabb",
    },
    {
      "context": "background: #445566;",
      "format": "hex",
      "position": {
        "column": 14,
        "line": 12,
      },
      "value": "#445566",
    },
    {
      "context": "color: rebeccapurple;",
      "format": "named",
      "position": {
        "column": 9,
        "line": 13,
      },
      "value": "rebeccapurple",
    },
  ],
  "errors": [],
  "metadata": undefined,
  "success": true,
  "warnings": [],
}
`;

exports[`extraction characterization > colors.styl as stylus 1`] = `
{
  "colors": [
    {
      "context": "primary = #deadbe",
      "format": "hex",
      "position": {
        "column": 11,
        "line": 1,
      },
      "value": "#deadbe",
    },
    {
      "context": "$secondary = tomato",
      "format": "named",
      "position": {
        "column": 14,
        "line": 2,
      },
      "value": "tomato",
    },
    {
      "context": "accent-color = rgb(9, 8, 7)",
      "format": "rgb",
      "position": {
        "column": 16,
        "line": 3,
      },
      "value": "rgb(9, 8, 7)",
    },
    {
      "context": "background #cafe00",
      "format": "hex",
      "position": {
        "column": 14,
        "line": 7,
      },
      "value": "#cafe00",
    },
    {
      "context": "border-color rgba(1, 2, 3, 0.5)",
      "format": "rgba",
      "position": {
        "column": 16,
        "line": 8,
      },
      "value": "rgba(1, 2, 3, 0.5)",
    },
    {
      "context": "color: #fedcba",
      "format": "hex",
      "position": {
        "column": 10,
        "line": 11,
      },
      "value": "#fedcba",
    },
    {
      "context": "background: hsl(45, 80%, 60%)",
      "format": "hsl",
      "position": {
        "column": 15,
        "line": 12,
      },
      "value": "hsl(45, 80%, 60%)",
    },
  ],
  "errors": [],
  "metadata": undefined,
  "success": true,
  "warnings": [],
}
`;

exports[`extraction characterization > colors.svg as xml 1`] = `
{
  "colors": [
    {
      "context": "<rect fill="#ff8800" stroke="rgb(1, 2, 3)" width="10" height="10"/>",
      "format": "hex",
      "position": {
        "column": 14,
        "line": 3,
      },
      "value": "#ff8800",
    },
    {
      "context": "<rect fill="#ff8800" stroke="rgb(1, 2, 3)" width="10" height="10"/>",
      "format": "rgb",
      "position": {
        "column": 31,
        "line": 3,
      },
      "value": "rgb(1, 2, 3)",
    },
    {
      "context": "<circle fill="goldenrod" style="stroke: #00ffcc; fill-opacity: 0.5" r="4"/>",
      "format": "named",
      "position": {
        "column": 16,
        "line": 4,
      },
      "value": "goldenrod",
    },
    {
      "context": "<circle fill="goldenrod" style="stroke: #00ffcc; fill-opacity: 0.5" r="4"/>",
      "format": "hex",
      "position": {
        "column": 42,
        "line": 4,
      },
      "value": "#00ffcc",
    },
    {
      "context": "<stop stop-color="#abc" offset="0"/>",
      "format": "hex",
      "position": {
        "column": 21,
        "line": 6,
      },
      "value": "#abc",
    },
    {
      "context": "<stop stop-color="hsla(200, 50%, 50%, 0.8)" offset="1"/>",
      "format": "hsla",
      "position": {
        "column": 21,
        "line": 7,
      },
      "value": "hsla(200, 50%, 50%, 0.8)",
    },
    {
      "context": "<text color="navy">x</text>",
      "format": "named",
      "position": {
        "column": 15,
        "line": 9,
      },
      "value": "navy",
    },
  ],
  "errors": [],
  "metadata": undefined,
  "success": true,
  "warnings": [],
}
`;

exports[`extraction characterization > unknown language falls back to CSS extraction 1`] = `
{
  "colors": [
    {
      "context": "accent = "#ff8800"  # python, but hex still found",
      "format": "hex",
      "position": {
        "column": 11,
        "line": 1,
      },
      "value": "#ff8800",
    },
  ],
  "errors": [],
  "metadata": undefined,
  "success": true,
  "warnings": [],
}
`;
